Add a couple of additional slides

--- a/slides/chapter-10-two-quantitative-variables.Rmd
+++ b/slides/chapter-10-two-quantitative-variables.Rmd
@@ -338,6 +338,13 @@ For each observation, we look at the deviation from the mean in x, divide by the
 
 
 ---
+## Correlation is not Causation
+
+Just in case you haven't heard this chant yet, "correlation is not causation". Say it a few times. 
+
+It's important to remember that correlation is a measure of association, but that doesn't mean there's any causal factors involved. In some cases, the choice of explanatory and response variables are arbitrary.
+
+---
 ## Outliers and Influential Observations
 
 ![XKCD - Outliers](https://imgs.xkcd.com/comics/boyfriend.png)
@@ -635,7 +642,8 @@ So when I did 1000 simulations of the correlation coefficient for our brain and 
 
 Conclusion: 
 
-I reject $H_0$ that there is no linear relationship between head size and brain weight with $p < 0.001$. There is very strong evidence that the linear relationship observed between the variables did not occur due to random chance, thus, we must conclude that there is a linear relationship between head size and brain weight.
+I reject $H_0$ that there is no linear relationship between head size and brain weight with $p < 0.001$. There is very strong evidence that the linear relationship observed between the variables did not occur due to random chance, thus, we must conclude that there is a linear relationship between head size and brain weight, that is, that $\rho \neq 0$.
+
 
 
 ---
@@ -1011,6 +1019,10 @@ brain %>%
 
 Let's compute $R^2$ using the SSE formula and check that it's the same as the value of $r$, squared.
 
+???
+
+Pause this video and try to use the formula on the previous slide to compute R^2 given the information on the chart.
+
 ---
 ## Example: Head Size and Brain Weight
 
@@ -1020,6 +1032,11 @@ $$R^2 = \frac{SS(\hat y - \overline y)}{SS(y - \overline y)} = \frac{\text{SSReg
 
 $$R^2 = r^2 = (.7996)^2 = `r .7996^2`$$
 
+???
+
+You should have taken SSreg (sum of squares regression) and divided by the total sum of squares, then multiplied by 100. Alternately, you could do 100 times 1 - sse (sum of squared errors)/total sum of squares, which would get you the same thing. 
+
+If we then just square the correlation, we get again, the same value for R^2. 
 
 ---
 ## Exploration 10.3
@@ -1108,6 +1125,8 @@ How can we simulate this?
 ???
 
 When we have two quantitative variables, our general null hypothesis is that x is not related to y in any way, which means our slope is 0. What does that mean for simulation?
+
+It means we simulate exactly the same way as we did for the correlation coefficient, but instead of computing $r$ we compute $b$ as our summary statistic. Then, we interpret $b$ instead of $r$. If you remember what we did with two proportions, the same concept applies - we can compute the difference or the relative risk, but the underlying simulation process is the same.
 
 ---
 ## Simulation-based Inference for the Slope
@@ -1220,7 +1239,7 @@ In 0 samples out of 1000, $|b^\ast| > 0.263$, so $p < 0.001$
 
 ???
 
-To sum this up, if we go to our 3s strategy, we start with a statistic - the correlation coefficient, r. We simulate by shuffling the y variable values around, and come up with a simulated distribution of the correlation coefficient under the null hypothesis that x and y don't have a linear relationship. Then, we compare our statistic to that distribution to get an assessment of the strength of the evidence.
+If we go to our 3s strategy, we start with a statistic - the slope, b. We simulate by shuffling the y variable values around, and come up with a simulated distribution of the correlation coefficient under the null hypothesis that x and y don't have a linear relationship. Then, we compare our statistic to that distribution to get an assessment of the strength of the evidence.
 
 So when I did 1000 simulations of the correlation coefficient for our brain and head size data, I got a distribution that looked like this... basically, there is no way that our linear relationship that was observed in the data could have arisen by chance. It's just not possible - p is too small, and even if we ran a million simulations, we still wouldn't get a nonzero p. 
 
@@ -1229,7 +1248,7 @@ So when I did 1000 simulations of the correlation coefficient for our brain and 
 
 Conclusion: 
 
-I reject $H_0$ that there is no linear relationship between head size and brain weight with $p < 0.001$. There is very strong evidence that the linear relationship observed between the variables did not occur due to random chance, thus, we must conclude that there is a linear relationship between head size and brain weight.
+I reject $H_0$ that there is no linear relationship between head size and brain weight with $p < 0.001$. There is very strong evidence that the linear relationship observed between the variables did not occur due to random chance, thus, we must conclude that there is a linear relationship between head size and brain weight, that is, that $\beta \neq 0$.
 
 --
 
@@ -1391,4 +1410,21 @@ and conclude that .underline[(conclusion in context of the problem)]
 Confidence interval interpretation:
 
 I am 95% confident that as .underline[explanatory variable] increases by 1 unit, the predicted population average value of .underline[response variable] will change by between .underline[(lower bound of b interval)] and .underline[(upper bound of b interval)]
+
+---
+## Example: Head Size and Brain Weight
+
+
+```{r, results = 'markup'}
+coef(summary(lreg))
+```
+
+We can see that the t value is `r coef(summary(lreg))[2,3]`, which corresponds to extremely strong evidence that there is a relationship between head size and brain weight.
+
+
+If we wanted to make a 95% CI for the slope of the line (e.g. for the increase in brain weight when head size increases by 1 cm^3), we could use the 2*SE method:
+
+$$0.263 \pm 2 * 0.0129 = (0.237, 0.289)$$
+
+I am 95% confident that the population average brain weight will increase by between 0.237 and 0.289 grams for each additional cubic centimeter of head size.
 
